--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </nav>
 
         <nav id="hamburger-nav">
-            <div class="logo">John Doe</div>
+            <div class="logo">Nate Kim</div>
             <div class="hamburger-menu">
                 <div class="hamburger-icon" onclick="toggleMenu()">
                     <span></span>
@@ -45,7 +45,7 @@
             <div class="section__text">
                 <p class="section__text__p1">Hello, I'm</p>
                 <h1 class="title">Nate Kim</h1>
-                <p class="section__text__p2">Frontend Developer</p>
+                <p class="section__text__p2">CS @ Georgia Tech</p>
 
                 <div class="btn-container">
                     <button 
@@ -108,16 +108,24 @@
                                 class="icon"
                             />
                             <h3>Education</h3>
-                            <p>B.Sc. Bachelors Degree<br>M.Sc. Masters Degree</p>
+                            <p>B.S. Computer Science<br>M.S. Computer Science</p>
                         </div>
                     </div>
 
                     <div class="text-container">
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Laboriosam illum accusantium ab itaque modi pariatur distinctio ipsa 
-                            fugiat hic nemo delectus, necessitatibus dolorem possimus recusandae 
-                            illo voluptate quo ratione quia.
+                            I am a third year undergraduate student at the Georgia Institute of Technology's College of Computing with concentrations in Intelligence and People.
+                            <br>
+                            <br>
+                            As an innately curious individual who loves to create for impact, software engineering is the perfect field for me. There's never a dull moment: the countless positive impressions left on the world and endless "Aha!" moments is what keeps me glued to this field. Some areas of interest of mine are back-end development, cloud architecture, and machine learning, but I'm always excited to dive into new aspects of computer science!
+                            <br>
+                            <br>
+                            As for myself, I've gotten a diverse taste of software engineering:
+                            <br>
+                            I've designed dynamic websites, written scripts to scrape websites for automatic transactions, developed a fully-interactive video game, and led a team to develop an SMS weather chat bot that won two awards.
+                            <br>
+                            <br>
+                            I'm always looking for opportunities to grow as a software engineer and expand my skills. So please feel free to reach out via email and check me out on my socials!
                         </p>
                     </div>
                 </div>
@@ -135,7 +143,7 @@
             <h1 class="title">Experience</h1>
             <div class="experience-details-container">
                 <div class="about-containers">
-                    <div class="details-containers">
+                    <div class="details-container">
                         <h2 class="experience-sub-title">Frontend Development</h2>
                         <div class="article-container">
                             <article>
@@ -149,11 +157,317 @@
                                     <p>Experienced</p>
                                 </div>
                             </article>
+                            <article>
+                                <img
+                                    src="./assets/checkmark.png"
+                                    alt="Experience icon"
+                                    class="icon"
+                                />
+                                <div>
+                                    <h3>CSS</h3>
+                                    <p>Experienced</p>
+                                </div>
+                            </article>
+                            <article>
+                                <img
+                                    src="./assets/checkmark.png"
+                                    alt="Experience icon"
+                                    class="icon"
+                                />
+                                <div>
+                                    <h3>SASS</h3>
+                                    <p>Intermediate</p>
+                                </div>
+                            </article>
+                            <article>
+                                <img
+                                    src="./assets/checkmark.png"
+                                    alt="Experience icon"
+                                    class="icon"
+                                />
+                                <div>
+                                    <h3>JavaScript</h3>
+                                    <p>Basic</p>
+                                </div>
+                            </article>
+                            <article>
+                                <img
+                                    src="./assets/checkmark.png"
+                                    alt="Experience icon"
+                                    class="icon"
+                                />
+                                <div>
+                                    <h3>TypeScript</h3>
+                                    <p>Basic</p>
+                                </div>
+                            </article>
+                            <article>
+                                <img
+                                    src="./assets/checkmark.png"
+                                    alt="Experience icon"
+                                    class="icon"
+                                />
+                                <div>
+                                    <h3>Material UI</h3>
+                                    <p>Intermediate</p>
+                                </div>
+                            </article>
+                        </div>
+                    </div>
+                    <div class="details-container">
+                        <h2 class="experience-sub-title">Backend Development</h2>
+                        <div class="article-container">
+                            <article>
+                                <img
+                                    src="./assets/checkmark.png"
+                                    alt="Experience icon"
+                                    class="icon"
+                                />
+                                <div>
+                                    <h3>PostgreSQL</h3>
+                                    <p>Experienced</p>
+                                </div>
+                            </article>
+                            <article>
+                                <img
+                                    src="./assets/checkmark.png"
+                                    alt="Experience icon"
+                                    class="icon"
+                                />
+                                <div>
+                                    <h3>Node JS</h3>
+                                    <p>Experienced</p>
+                                </div>
+                            </article>
+                            <article>
+                                <img
+                                    src="./assets/checkmark.png"
+                                    alt="Experience icon"
+                                    class="icon"
+                                />
+                                <div>
+                                    <h3>Express JS</h3>
+                                    <p>Intermediate</p>
+                                </div>
+                            </article>
+                            <article>
+                                <img
+                                    src="./assets/checkmark.png"
+                                    alt="Experience icon"
+                                    class="icon"
+                                />
+                                <div>
+                                    <h3>Git</h3>
+                                    <p>Basic</p>
+                                </div>
+                            </article>
                         </div>
                     </div>
                 </div>
             </div>
+            <img
+                src="./assets/arrow.png"
+                alt="Arrow icon"
+                class="icon arrow"
+                onclick="location.href='./#projects'"
+            />
         </section>
+
+        <section id="projects">
+            <p class="section__text__p1">Browse My Recent</p>
+            <h1 class="title">Projects</h1>
+            <div class="experience-details-container">
+                <div class="about-containers project-containers">
+                    <div class="details-container color-container">
+                        <div class="article-container">
+                            <img 
+                                src="./assets/project-1.png"
+                                alt="Project 1"
+                                class="project-img"
+                            />
+                        </div>
+                        <h2 class="experience-sub-title project-title">Sherlock AI</h2>
+                        <div class="btn-container">
+                            <button
+                                class="btn btn-color-2 project-btn"
+                                onclick="location.href='https://github.com/'"
+                            >
+                                Github
+                            </button>
+                            <button
+                                class="btn btn-color-2 project-btn"
+                                onclick="location.href='https://github.com/'"
+                            >
+                                Live Demo
+                            </button>
+                        </div>
+                    </div>
+                    <div class="details-container color-container">
+                        <div class="article-container">
+                            <img 
+                                src="./assets/project-2.png"
+                                alt="Project 2"
+                                class="project-img"
+                            />
+                        </div>
+                        <h2 class="experience-sub-title project-title">CWCS</h2>
+                        <div class="btn-container">
+                            <button
+                                class="btn btn-color-2 project-btn"
+                                onclick="location.href='https://github.com/'"
+                            >
+                                Github
+                            </button>
+                            <button
+                                class="btn btn-color-2 project-btn"
+                                onclick="location.href='https://github.com/'"
+                            >
+                                Live Demo
+                            </button>
+                        </div>
+                    </div>
+                    <div class="details-container color-container">
+                        <div class="article-container">
+                            <img 
+                                src="./assets/project-3.png"
+                                alt="Project 3"
+                                class="project-img"
+                            />
+                        </div>
+                        <h2 class="experience-sub-title project-title">WeEat</h2>
+                        <div class="btn-container">
+                            <button
+                                class="btn btn-color-2 project-btn"
+                                onclick="location.href='https://github.com/'"
+                            >
+                                Github
+                            </button>
+                            <button
+                                class="btn btn-color-2 project-btn"
+                                onclick="location.href='https://github.com/'"
+                            >
+                                Live Demo
+                            </button>
+                        </div>
+                    </div>
+                    <div class="details-container color-container">
+                        <div class="article-container">
+                            <img 
+                                src="./assets/project-3.png"
+                                alt="Project 3"
+                                class="project-img"
+                            />
+                        </div>
+                        <h2 class="experience-sub-title project-title">AWS Web Scrape Transaction Bot</h2>
+                        <div class="btn-container">
+                            <button
+                                class="btn btn-color-2 project-btn"
+                                onclick="location.href='https://github.com/'"
+                            >
+                                Github
+                            </button>
+                            <button
+                                class="btn btn-color-2 project-btn"
+                                onclick="location.href='https://github.com/'"
+                            >
+                                Live Demo
+                            </button>
+                        </div>
+                    </div>
+                    <div class="details-container color-container">
+                        <div class="article-container">
+                            <img 
+                                src="./assets/project-3.png"
+                                alt="Project 3"
+                                class="project-img"
+                            />
+                        </div>
+                        <h2 class="experience-sub-title project-title">Tower Defense Game</h2>
+                        <div class="btn-container">
+                            <button
+                                class="btn btn-color-2 project-btn"
+                                onclick="location.href='https://github.com/'"
+                            >
+                                Github
+                            </button>
+                            <button
+                                class="btn btn-color-2 project-btn"
+                                onclick="location.href='https://github.com/'"
+                            >
+                                Live Demo
+                            </button>
+                        </div>
+                    </div>
+                    <div class="details-container1 color-container">
+                        <div class="article-container">
+                            <img 
+                                src="./assets/project-3.png"
+                                alt="Project 3"
+                                class="project-img"
+                            />
+                        </div>
+                        <h2 class="experience-sub-title project-title">Zeus</h2>
+                        <div class="btn-container">
+                            <button
+                                class="btn btn-color-2 project-btn"
+                                onclick="location.href='https://github.com/'"
+                            >
+                                Github
+                            </button>
+                            <button
+                                class="btn btn-color-2 project-btn"
+                                onclick="location.href='https://github.com/'"
+                            >
+                                Live Demo
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <img
+                src="./assets/arrow.png"
+                alt="Arrow icon"
+                class="icon arrow"
+                onclick="location.href='./#contact'"
+            />
+        </section>
+
+        <section id="contact">
+            <p class="section__text__p1">Get in Touch</p>
+            <h1 class="title">Contact Me</h1>
+            <div class="contact-info-upper-container">
+                <div class="contact-info-container">
+                    <img
+                        src="./assets/email.png"
+                        alt="Email icon"
+                        class="icon contact-icon email-icon"
+                    />
+                    <p><a href="mailto:nathanielk0124@gmail.com">nathanielk0124@gmail.com</a></p>
+                </div>
+                <div class="contact-info-container">
+                    <img
+                        src="./assets/linkedin.png"
+                        alt="Linkedin icon"
+                        class="icon contact-icon"
+                    />
+                    <p><a href="https://www.linkedin.com/in/natekim27">LinkedIn</a></p>
+                </div>
+            </div>
+        </section>
+
+        <footer>
+            <nav>
+                <div class="nav-links-container">
+                    <ul class="nav-links">
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#experience">Experience</a></li>
+                        <li><a href="#projects">Projects</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </div>
+            </nav>
+            <p>Copyright &#169; 2023 Nate Kim. All Rights Reserved.</p>
+        </footer>
 
         <script src="script.js"></script>
     </body>
